feat: change password functionality
