# src/dtos/user.dto.ts
@@ -1,7 +1,7 @@
 import { User } from "../models/userModel";
 export interface updateProfileDto {
-    first_name?: string;
-    last_name?: string;
+  first_name?: string;
+  last_name?: string;
 }
 
 export interface ApiResponseUpdateUser {
@@ -9,4 +9,9 @@ export interface ApiResponseUpdateUser {
   message: string;
   statusCode: number;
   status: "success" | "error";
+}
+
+export interface changePasswordDto {
+  oldPassword: string;
+  newPassword: string;
 }
